--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ serde = { version = "1.0", features = ["derive"] }
 diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono"] }
 dotenv = "0.15.0"
 chrono = { version = "0.4.23", features = ["serde"] }
+chrono-tz = "0.8.1"
 reqwest = { version = "0.11.4", features = ["json"] }
