--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ dotenv = "0.15.0"
 chrono = { version = "0.4.23", features = ["serde"] }
 chrono-tz = "0.8.1"
 reqwest = { version = "0.11.4", features = ["json"] }
+env_logger = "0.10.0"
