--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 DATABASE_URL=postgres://admin:12345@localhost:5432/mydb
 INVENTORY_URL=http://localhost:8200/api/inventory
+REDIS_URL=redis://:12345@localhost:6379
