--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,11 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.92"
 diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono"] }
 dotenv = "0.15.0"
 chrono = { version = "0.4.23", features = ["serde"] }
 chrono-tz = "0.8.1"
 reqwest = { version = "0.11.4", features = ["json"] }
 env_logger = "0.10.0"
+fred = "5.2.0"
