--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+tokio = "1.25.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.92"
 diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono"] }
@@ -16,3 +17,8 @@ chrono-tz = "0.8.1"
 reqwest = { version = "0.11.4", features = ["json"] }
 env_logger = "0.10.0"
 fred = "5.2.0"
+async-nats = "0.27.1"
+bytes = "1.4.0"
+futures = "0.3.26"
+uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
+
