--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,5 @@ fred = "5.2.0"
 async-nats = "0.27.1"
 bytes = "1.4.0"
 futures = "0.3.26"
-uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
+rand = "0.8.5"
 
