chore: export num_cpus

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ INVENTORY_URL=http://localhost:8200/api/inventory
 REDIS_URL=redis://:12345@localhost:6379
 NATS_URL=nats://admin:12345@localhost:4222
 NATS_TOPIC_PREFIX=vm1
+NUM_LOGICAL_PROCESSORS=16
